<resources>
    <string name="app_name">YouQuiz</string>
    <string name="instruction">Enter in question and select the type of question</string>
    <string name="hint">Type in the question here</string>
    <string name="prompt">Select Option</string>
    <string-array name="question_option">
        <item>Select Option</item>
        <item>Multiple Choice</item>
        <item>True/False</item>
        <item>Multiple Answer Choices</item>
        <item>Short Answer</item>
    </string-array>
    <string-array name="multiple_choice_answer">
        <item>Select Answer</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>
    <string-array name="true_false_answer">
        <item>Select Answer</item>
        <item>True</item>
        <item>False</item>
    </string-array>
    <string name="option_a">A</string>
    <string name="option_b">B</string>
    <string name="option_c">C</string>
    <string name="option_d">D</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="prev_button">Prev</string>
    <string name="next_button">Next</string>
    <string name="short_answer_fill">Fill short answer</string>
    <string name="submit_button">Submit</string>
    <string name="clear_button">Clear</string>
    <string name="finish_button">Finish</string>
    <string name="empty_toast">Please fill in the input field(s)!</string>
    <string name="back_button">Back</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="done_button">Done</string>
    <string name="number">%d.</string>
    <string name="your_answer">Your Answer</string>
    <string name="score">Score: </string>
    <string name="retake_button">Retake</string>
    <string name="reset_button">Reset</string>
</resources>
