<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/instruction"/>

    <EditText
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/instruction"
        android:hint="@string/hint" />

    <Spinner
        android:id="@+id/entries"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/question"
        android:entries="@string/entries"
        android:prompt="@string/prompt" >
    </Spinner>

</RelativeLayout>