<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".QuestionActivity">
    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp" />
    <RelativeLayout
        android:id="@+id/multiple_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <View
            android:id="@+id/view_center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"/>
        <CheckBox
            android:id="@+id/check_a"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_a"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/view_center_2"/>
        <CheckBox
            android:id="@+id/check_b"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_b"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/view_center_2"/>
        <CheckBox
            android:id="@+id/check_c"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_c"
            android:layout_toStartOf="@id/view_center_2"
            android:layout_below="@id/check_a"/>
        <CheckBox
            android:id="@+id/check_d"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_d"
            android:layout_below="@id/check_b"
            android:layout_toEndOf="@id/check_c"/>
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/short_answer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        android:visibility="gone">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/short_answer_question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textCapSentences" />
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:id="@+id/multiple_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/multiple_radio_group">
            <RadioButton
                android:id="@+id/radio_a"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_a" />
            <RadioButton
                android:id="@+id/radio_b"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_b" />
            <RadioButton
                android:id="@+id/radio_c"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_c" />
            <RadioButton
                android:id="@+id/radio_d"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_d" />
        </RadioGroup>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">
        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button" />
        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            android:contentDescription="@string/prev_button" />
        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"
            android:contentDescription="@string/next_button" />
    </LinearLayout>
</LinearLayout>